MNPL-20 | Implement global authentication by access token with demo getAuthenticatedUser() method
