# src/main/models/responses/UserResponseDto.ts
@@ -1,0 +1,4 @@
+export default interface UserResponseDto {
+  id: number;
+  nickname: string;
+}
