# tsoa/swagger.json
@@ -33,9 +33,32 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"UserResponseDto": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"nickname": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"nickname"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
-		"securitySchemes": {}
+		"securitySchemes": {
+			"JWT": {
+				"type": "apiKey",
+				"in": "header",
+				"name": "Authorization"
+			}
+		}
 	},
 	"info": {
 		"title": "monopoly-backend",
@@ -50,6 +73,38 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/api/v1/auth/tokens-pair": {
+			"get": {
+				"operationId": "GetTokensPair",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TokensPairResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth Controller"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/api/v1/auth/tokens-renewal": {
 			"post": {
 				"operationId": "GenerateTokensByRefreshToken",
@@ -82,16 +137,16 @@
 				}
 			}
 		},
-		"/api/v1/users": {
+		"/api/v1/users/me": {
 			"get": {
-				"operationId": "Test",
+				"operationId": "GetAuthenticatedUser",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"type": "string"
+									"$ref": "#/components/schemas/UserResponseDto"
 								}
 							}
 						}
@@ -100,29 +155,11 @@
 				"tags": [
 					"User Controller"
 				],
-				"security": [],
-				"parameters": []
-			}
-		},
-		"/api/v1/users/tokens": {
-			"get": {
-				"operationId": "TestTokens",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/TokensPairResponseDto"
-								}
-							}
-						}
+				"security": [
+					{
+						"JWT": []
 					}
-				},
-				"tags": [
-					"User Controller"
 				],
-				"security": [],
 				"parameters": []
 			}
 		}
